--- a/css/main.css
+++ b/css/main.css
@@ -6318,3 +6318,8 @@ a.text-dark:hover, a.text-dark:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6; } }
+
+    /*Edited by Sixian*/
+    #footer a{
+      padding-right: 0.5em;
+    }
