add server side rendering

--- a/css/main.css
+++ b/css/main.css
@@ -633,7 +633,16 @@ pre {
 
 .offset-11 {
   margin-left: 91.66667%; }
-
+.cut-content {
+ 
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-clamp: 4;
+  box-orient: vertical;
+  -webkit-line-clamp: 4; /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
 @media (min-width: 576px) {
   .col-sm {
     flex-basis: 0;
@@ -4467,6 +4476,8 @@ button.bg-dark:focus {
 
 .d-inline-flex {
   display: inline-flex !important; }
+
+
 
 @media (min-width: 576px) {
   .d-sm-none {
