--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,12 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -ms-overflow-style: scrollbar;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
+ 
+}
+::-webkit-scrollbar { 
+  display: none; 
+}
 
 @-ms-viewport {
   width: device-width; }
@@ -55,7 +60,8 @@ body {
     line-height: 1.5;
     color: #FEFEFE;
     text-align: left;
-    background-color: #fff;
+   
+   
 }
 
 [tabindex="-1"]:focus {
@@ -204,7 +210,8 @@ textarea {
   margin: 0;
   font-family: inherit;
   font-size: inherit;
-  line-height: inherit; }
+  line-height: inherit;
+font-size: 16px }
 
 button,
 input {
@@ -643,6 +650,7 @@ pre {
   -webkit-line-clamp: 4; /* number of lines to show */
   -webkit-box-orient: vertical;
 }
+
 @media (min-width: 576px) {
   .col-sm {
     flex-basis: 0;
@@ -1688,7 +1696,9 @@ fieldset:disabled a.btn {
     .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-primary.dropdown-toggle:focus {
       box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(253, 238, 48, 0.5); }
-
+.btn-primary  {
+  border:none !important;
+}
 .btn-secondary {
   color: #fff;
   background-color: #6c757d;
@@ -6333,4 +6343,8 @@ a.text-dark:hover, a.text-dark:focus {
     /*Edited by Sixian*/
     #footer a{
       padding-right: 0.5em;
+    }
+    .styles_modal__gNwvD {
+      width: 80% !important;
+      max-width: 80% !important;
     }
